# hariadashboard

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  compose.yaml  dashboard_node.py  index.html  main.py  pyproject.toml
dashboard-backend/: .gitignore  requirements.txt  run-legacy.sh  run.sh
dashboard-backend/app/: config.py  legacy_main.py  main.py  ros_manager.py  schemas.py
dashboard-backend/app/routers/: health.py  playback.py  recordings.py  session.py  topics.py  ws_demo.py
dashboard-backend/app/services/: bag_indexer.py  bag_reader.py  live_capture.py  player.py  recorder.py  session_cache.py  session_state.py
dashboard-backend/frontend/: index.html
dashboard-backend/frontend/static/: annotations.js  explorer.js  panels.js  sidebar.js  style.css  timeline.js
hri_curator/: __init__.py  cli.py  config.py  database.py  discovery.py  eventlog.py  exporter.py  fingerprint.py  merge.py  metadata.py  paths.py  preview.py  qc.py  reviews.py  scanner.py  webapp.py
hri_curator/web/: app.js  index.html  mvp.css  style.css
scripts/: acceptance-docker  docker-daemon-check  hri-curator-docker
static/: annotations.js  panels.js  sidebar.js  style.css  timeline.js
tests/: conftest.py  test_api.py  test_real_sample.py  test_reviews_exports.py  test_scan.py
